Add Main class and update README